# microsoft-office-macro-clustering

./: pu.ipynb  pyproject.toml
