[tool.poetry]
name = "microsoft-office-macro-clustering"
version = "0.1.0"
description = ""
authors = ["Ashton Sidhu <ashton.sidhu1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipywidgets = "^7.7.0"
matplotlib = "^3.5.2"
numpy = "^1.22.3"
pandas = "^1.4.2"
sklearn = "^0.0"
xgboost = "^1.6.0"
mlflow = "^1.25.1"
loguru = "^0.6.0"
cleanlab = "^2.0.0"
shap = "^0.40.0"
interpret = "^0.2.7"
explainerdashboard = "^0.3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
